--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng s --host 0.0.0.0 --disable-host-check true  -o",
+    "build": "npm run ng-high-memory build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
+    "hmr": "ng s -o --hmr",
+    "analyze": "npm run ng-high-memory build -- --source-map",
+    "analyze:view": "source-map-explorer dist/**/*.js",
+    "test-coverage": "ng test --code-coverage --watch=false",
+    "color-less": "ng-alain-plugin-theme -t=colorLess",
+    "theme": "ng-alain-plugin-theme -t=themeCss",
+    "icon": "ng g ng-alain:plugin icon",
+    "prepare": "husky install",
+    "lint": "npm run lint:ts && npm run lint:style",
+    "lint:ts": "ng lint --fix",
+    "lint:style": "npx stylelint \"src/**/*.less\" --fix"
   },
   "private": true,
   "dependencies": {
@@ -18,21 +30,79 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@delon/abc": "^16.3.0",
+    "@delon/acl": "^16.3.0",
+    "@delon/auth": "^16.3.0",
+    "@delon/cache": "^16.3.0",
+    "@delon/chart": "^16.3.0",
+    "@delon/form": "^16.3.0",
+    "@delon/mock": "^16.3.0",
+    "@delon/theme": "^16.3.0",
+    "@delon/util": "^16.3.0",
+    "@types/md5": "^2.3.2",
+    "@zxing/browser": "^0.1.4",
+    "@zxing/library": "^0.20.0",
+    "@zxing/ngx-scanner": "^16.0.1",
+    "cordova-res": "^0.15.4",
+    "html5-qrcode": "^2.3.8",
+    "md5": "^2.3.0",
+    "native-run": "^1.7.2",
+    "ng-alain": "16.3.0",
+    "ng-zorro-antd": "^16.1.0",
+    "ngx-webcam": "^0.4.1",
+    "qrcode": "1.5.3",
     "rxjs": "~7.8.0",
+    "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
+    "@angular-eslint/builder": "~16.1.1",
+    "@angular-eslint/eslint-plugin": "~16.1.1",
+    "@angular-eslint/eslint-plugin-template": "~16.1.1",
+    "@angular-eslint/schematics": "~16.1.1",
+    "@angular-eslint/template-parser": "~16.1.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@angular/language-service": "^16.2.0",
+    "@delon/testing": "^16.3.0",
     "@types/jasmine": "~4.3.0",
+    "@types/qrcode": "^1.5.2",
+    "@typescript-eslint/eslint-plugin": "~6.4.1",
+    "@typescript-eslint/parser": "~6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "~9.0.0",
+    "eslint-plugin-deprecation": "~1.5.0",
+    "eslint-plugin-import": "~2.28.1",
+    "eslint-plugin-jsdoc": "~46.5.0",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "eslint-plugin-prettier": "~5.0.0",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^14.0.1",
+    "ng-alain": "^16.3.0",
+    "ng-alain-plugin-theme": "^15.0.1",
+    "prettier": "^3.0.2",
+    "source-map-explorer": "^2.5.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-order": "^6.0.3",
     "typescript": "~5.1.3"
+  },
+  "lint-staged": {
+    "(src)/**/*.{html,ts}": [
+      "eslint --fix"
+    ],
+    "(src)/**/*.less": [
+      "npm run lint:style"
+    ]
   }
 }
