实现基本功能

--- a/package.json
+++ b/package.json
@@ -39,20 +39,15 @@
     "@delon/mock": "^16.3.0",
     "@delon/theme": "^16.3.0",
     "@delon/util": "^16.3.0",
+    "@sec-ant/zxing-wasm": "^2.1.5",
     "@types/md5": "^2.3.2",
-    "@zxing/browser": "^0.1.4",
-    "@zxing/library": "^0.20.0",
-    "@zxing/ngx-scanner": "^16.0.1",
-    "cordova-res": "^0.15.4",
-    "html5-qrcode": "^2.3.8",
+    "filesize": "^10.0.12",
     "md5": "^2.3.0",
-    "native-run": "^1.7.2",
-    "ng-alain": "16.3.0",
     "ng-zorro-antd": "^16.1.0",
     "ngx-webcam": "^0.4.1",
+    "pako": "^2.1.0",
     "qrcode": "1.5.3",
-    "rxjs": "~7.8.0",
-    "screenfull": "^6.0.2",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -67,7 +62,10 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/language-service": "^16.2.0",
     "@delon/testing": "^16.3.0",
+    "@types/dom-mediacapture-transform": "^0.1.6",
+    "@types/dom-webcodecs": "^0.1.8",
     "@types/jasmine": "~4.3.0",
+    "@types/pako": "^2.0.0",
     "@types/qrcode": "^1.5.2",
     "@typescript-eslint/eslint-plugin": "~6.4.1",
     "@typescript-eslint/parser": "~6.4.1",
@@ -86,7 +84,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.1",
-    "ng-alain": "^16.3.0",
     "ng-alain-plugin-theme": "^15.0.1",
     "prettier": "^3.0.2",
     "source-map-explorer": "^2.5.3",
