--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
-      "dom"
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
     "allowSyntheticDefaultImports": true,
     "paths": {
