--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng s --host 0.0.0.0 --disable-host-check true  -o",
-    "build": "npm run ng-high-memory build",
+    "build": "npm run ng-high-memory build && gzipper compress ./dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
@@ -18,7 +18,11 @@
     "prepare": "husky install",
     "lint": "npm run lint:ts && npm run lint:style",
     "lint:ts": "ng lint --fix",
-    "lint:style": "npx stylelint \"src/**/*.less\" --fix"
+    "lint:style": "npx stylelint \"src/**/*.less\" --fix",
+    "dev:ssr": "ng run qrcode-transfer-web:serve-ssr",
+    "serve:ssr": "node dist/qrcode-transfer-web/server/main.js",
+    "build:ssr": "ng build && ng run qrcode-transfer-web:server",
+    "prerender": "ng run qrcode-transfer-web:prerender"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +33,7 @@
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/platform-server": "^16.2.6",
     "@angular/router": "^16.2.0",
     "@delon/abc": "^16.3.0",
     "@delon/acl": "^16.3.0",
@@ -39,9 +44,13 @@
     "@delon/mock": "^16.3.0",
     "@delon/theme": "^16.3.0",
     "@delon/util": "^16.3.0",
+    "@ng-toolkit/universal": "1.1.21",
+    "@nguniversal/express-engine": "^16.2.0",
     "@sec-ant/zxing-wasm": "^2.1.5",
     "@types/md5": "^2.3.2",
+    "express": "^4.15.2",
     "filesize": "^10.0.12",
+    "gzipper": "^7.2.0",
     "md5": "^2.3.0",
     "ng-zorro-antd": "^16.1.0",
     "ngx-webcam": "^0.4.1",
@@ -53,6 +62,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
+    "@angular-devkit/core": "~16.2.1",
+    "@angular-devkit/schematics": "~16.2.1",
     "@angular-eslint/builder": "~16.1.1",
     "@angular-eslint/eslint-plugin": "~16.1.1",
     "@angular-eslint/eslint-plugin-template": "~16.1.1",
@@ -62,9 +73,13 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/language-service": "^16.2.0",
     "@delon/testing": "^16.3.0",
+    "@nguniversal/builders": "^16.2.0",
+    "@schematics/angular": "~16.2.1",
     "@types/dom-mediacapture-transform": "^0.1.6",
     "@types/dom-webcodecs": "^0.1.8",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "@types/pako": "^2.0.0",
     "@types/qrcode": "^1.5.2",
     "@typescript-eslint/eslint-plugin": "~6.4.1",
