--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,17 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "inlineSources": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "ES6",
+    "module": "ES6",
     "useDefineForClassFields": false,
     "lib": [
-      "ES2022",
+      "ES6",
       "dom",
       "dom.iterable",
       "esnext"
