--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     ],
     "allowSyntheticDefaultImports": true,
     "paths": {
+      "tlds": ["./tlds.d.ts"],
       "@shared": [
         "src/app/shared/index"
       ],
