update angular to v18

--- a/package.json
+++ b/package.json
@@ -26,94 +26,100 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/platform-server": "^16.2.6",
-    "@angular/router": "^16.2.0",
-    "@delon/abc": "^16.3.0",
-    "@delon/acl": "^16.3.0",
-    "@delon/auth": "^16.3.0",
-    "@delon/cache": "^16.3.0",
-    "@delon/chart": "^16.3.0",
-    "@delon/form": "^16.3.0",
-    "@delon/mock": "^16.3.0",
-    "@delon/theme": "^16.3.0",
-    "@delon/util": "^16.3.0",
-    "@ng-toolkit/universal": "1.1.21",
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/platform-server": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@angular/ssr": "^18.2.1",
+    "@delon/abc": "^18.1.0",
+    "@delon/acl": "^18.1.0",
+    "@delon/auth": "^18.1.0",
+    "@delon/cache": "^18.1.0",
+    "@delon/chart": "^18.1.0",
+    "@delon/form": "^18.1.0",
+    "@delon/mock": "^18.1.0",
+    "@delon/theme": "^18.1.0",
+    "@delon/util": "^18.1.0",
+    "@ng-toolkit/universal": "8.1.0",
     "@nguniversal/express-engine": "^16.2.0",
-    "@sec-ant/zxing-wasm": "^2.1.5",
+    "@sec-ant/zxing-wasm": "^2.2.0",
     "@twilio/webrtc": "^4.6.0",
     "@types/md5": "^2.3.2",
-    "@zxing/browser": "^0.1.4",
+    "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.20.0",
     "detectrtc": "^1.4.1",
-    "express": "^4.15.2",
-    "filesize": "^10.0.12",
-    "gzipper": "^7.2.0",
+    "express": "^4.18.2",
+    "filesize": "^10.1.4",
+    "gzipper": "8.1.0",
     "md5": "^2.3.0",
-    "ng-zorro-antd": "^16.1.0",
+    "ng-alain": "^18.1.0",
+    "ng-zorro-antd": "18.1.1",
     "ngx-webcam": "^0.4.1",
     "pako": "^2.1.0",
     "qrcode": "1.5.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
-    "webrtc-adapter": "^8.2.3",
-    "zone.js": "~0.13.0"
+    "webrtc-adapter": "^9.0.1",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.1",
-    "@angular-devkit/core": "~16.2.1",
-    "@angular-devkit/schematics": "~16.2.1",
-    "@angular-eslint/builder": "~16.1.1",
-    "@angular-eslint/eslint-plugin": "~16.1.1",
-    "@angular-eslint/eslint-plugin-template": "~16.1.1",
-    "@angular-eslint/schematics": "~16.1.1",
-    "@angular-eslint/template-parser": "~16.1.1",
-    "@angular/cli": "~16.2.1",
-    "@angular/compiler-cli": "^16.2.0",
-    "@angular/language-service": "^16.2.0",
-    "@delon/testing": "^16.3.0",
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular-devkit/core": "18.2.1",
+    "@angular-devkit/schematics": "18.2.1",
+    "@angular-eslint/builder": "18.3.0",
+    "@angular-eslint/eslint-plugin": "^18.3.0",
+    "@angular-eslint/eslint-plugin-template": "^18.3.0",
+    "@angular-eslint/schematics": "18.3.0",
+    "@angular-eslint/template-parser": "^18.3.0",
+    "@angular/cli": "^18.2.1",
+    "@angular/compiler-cli": "^18.2.0",
+    "@angular/language-service": "^18.2.1",
+    "@delon/testing": "18.1.0",
+    "@ng-util/monaco-editor": "^18.0.0",
     "@nguniversal/builders": "^16.2.0",
-    "@schematics/angular": "~16.2.1",
+    "@schematics/angular": "18.2.1",
     "@types/dom-mediacapture-transform": "^0.1.6",
     "@types/dom-webcodecs": "^0.1.8",
-    "@types/express": "^4.17.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^16.11.7",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "@types/pako": "^2.0.0",
     "@types/qrcode": "^1.5.2",
-    "@types/webrtc": "^0.0.41",
+    "@types/webrtc": "0.0.43",
     "@typescript-eslint/eslint-plugin": "~6.4.1",
     "@typescript-eslint/parser": "~6.4.1",
     "eslint": "^8.48.0",
-    "eslint-config-prettier": "~9.0.0",
-    "eslint-plugin-deprecation": "~1.5.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-deprecation": "3.0.0",
     "eslint-plugin-import": "~2.28.1",
-    "eslint-plugin-jsdoc": "~46.5.0",
+    "eslint-plugin-jsdoc": "50.2.2",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "~5.0.0",
+    "eslint-plugin-prettier": "5.2.1",
     "husky": "^8.0.3",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.1",
-    "ng-alain-plugin-theme": "^15.0.1",
+    "ng-alain": "^18.1.0",
+    "ng-alain-plugin-theme": "18.0.0",
+    "ngx-tinymce": "^18.0.0",
     "prettier": "^3.0.2",
     "source-map-explorer": "^2.5.3",
-    "stylelint": "^15.10.3",
+    "stylelint": "16.8.2",
+    "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard": "36.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^6.0.3",
-    "typescript": "~5.1.3"
+    "typescript": "~5.5.2"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
